--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>project</groupId>
-	<artifactId>practice</artifactId>
+	<artifactId>Todo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>practice</name>
 	<description>Demo project for Spring Boot</description>
